@@ -548,6 +548,31 @@ comment|// because of type determination
 DECL|enum constant|NOOP
 name|NOOP
 block|}
+DECL|field|multipartUploadLimitKB
+specifier|private
+name|int
+name|multipartUploadLimitKB
+decl_stmt|;
+DECL|field|formUploadLimitKB
+specifier|private
+name|int
+name|formUploadLimitKB
+decl_stmt|;
+DECL|field|enableRemoteStreams
+specifier|private
+name|boolean
+name|enableRemoteStreams
+decl_stmt|;
+DECL|field|handleSelect
+specifier|private
+name|boolean
+name|handleSelect
+decl_stmt|;
+DECL|field|addHttpRequestToContext
+specifier|private
+name|boolean
+name|addHttpRequestToContext
+decl_stmt|;
 comment|/** Creates a default instance from the solrconfig.xml. */
 DECL|method|SolrConfig
 specifier|public
@@ -1486,6 +1511,52 @@ name|updateHandlerInfo
 operator|=
 name|loadUpdatehandlerInfo
 argument_list|()
+expr_stmt|;
+name|multipartUploadLimitKB
+operator|=
+name|getInt
+argument_list|(
+literal|"requestDispatcher/requestParsers/@multipartUploadLimitInKB"
+argument_list|,
+literal|2048
+argument_list|)
+expr_stmt|;
+name|formUploadLimitKB
+operator|=
+name|getInt
+argument_list|(
+literal|"requestDispatcher/requestParsers/@formdataUploadLimitInKB"
+argument_list|,
+literal|2048
+argument_list|)
+expr_stmt|;
+name|enableRemoteStreams
+operator|=
+name|getBool
+argument_list|(
+literal|"requestDispatcher/requestParsers/@enableRemoteStreaming"
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+comment|// Let this filter take care of /select?xxx format
+name|handleSelect
+operator|=
+name|getBool
+argument_list|(
+literal|"requestDispatcher/@handleSelect"
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|addHttpRequestToContext
+operator|=
+name|getBool
+argument_list|(
+literal|"requestDispatcher/requestParsers/@addHttpRequestToContext"
+argument_list|,
+literal|false
+argument_list|)
 expr_stmt|;
 name|Config
 operator|.
@@ -2938,6 +3009,56 @@ name|reloadLuceneSPI
 argument_list|()
 expr_stmt|;
 block|}
+block|}
+DECL|method|getMultipartUploadLimitKB
+specifier|public
+name|int
+name|getMultipartUploadLimitKB
+parameter_list|()
+block|{
+return|return
+name|multipartUploadLimitKB
+return|;
+block|}
+DECL|method|getFormUploadLimitKB
+specifier|public
+name|int
+name|getFormUploadLimitKB
+parameter_list|()
+block|{
+return|return
+name|formUploadLimitKB
+return|;
+block|}
+DECL|method|isHandleSelect
+specifier|public
+name|boolean
+name|isHandleSelect
+parameter_list|()
+block|{
+return|return
+name|handleSelect
+return|;
+block|}
+DECL|method|isAddHttpRequestToContext
+specifier|public
+name|boolean
+name|isAddHttpRequestToContext
+parameter_list|()
+block|{
+return|return
+name|addHttpRequestToContext
+return|;
+block|}
+DECL|method|isEnableRemoteStreams
+specifier|public
+name|boolean
+name|isEnableRemoteStreams
+parameter_list|()
+block|{
+return|return
+name|enableRemoteStreams
+return|;
 block|}
 block|}
 end_class
