@@ -22,6 +22,16 @@ name|java
 operator|.
 name|io
 operator|.
+name|ByteArrayOutputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|File
 import|;
 end_import
@@ -50,9 +60,9 @@ begin_import
 import|import
 name|java
 operator|.
-name|io
+name|net
 operator|.
-name|ByteArrayOutputStream
+name|URL
 import|;
 end_import
 
@@ -111,16 +121,6 @@ operator|.
 name|charset
 operator|.
 name|CodingErrorAction
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|net
-operator|.
-name|URL
 import|;
 end_import
 
@@ -211,26 +211,6 @@ operator|.
 name|util
 operator|.
 name|Map
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|slf4j
-operator|.
-name|Logger
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|slf4j
-operator|.
-name|LoggerFactory
 import|;
 end_import
 
@@ -442,7 +422,7 @@ name|solr
 operator|.
 name|core
 operator|.
-name|Config
+name|SolrConfig
 import|;
 end_import
 
@@ -485,6 +465,26 @@ operator|.
 name|request
 operator|.
 name|SolrQueryRequestBase
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|Logger
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|LoggerFactory
 import|;
 end_import
 
@@ -652,7 +652,7 @@ DECL|method|SolrRequestParsers
 specifier|public
 name|SolrRequestParsers
 parameter_list|(
-name|Config
+name|SolrConfig
 name|globalConfig
 parameter_list|)
 block|{
@@ -696,57 +696,37 @@ name|multipartUploadLimitKB
 operator|=
 name|globalConfig
 operator|.
-name|getInt
-argument_list|(
-literal|"requestDispatcher/requestParsers/@multipartUploadLimitInKB"
-argument_list|,
-literal|2048
-argument_list|)
+name|getMultipartUploadLimitKB
+argument_list|()
 expr_stmt|;
 name|formUploadLimitKB
 operator|=
 name|globalConfig
 operator|.
-name|getInt
-argument_list|(
-literal|"requestDispatcher/requestParsers/@formdataUploadLimitInKB"
-argument_list|,
-literal|2048
-argument_list|)
+name|getFormUploadLimitKB
+argument_list|()
 expr_stmt|;
 name|enableRemoteStreams
 operator|=
 name|globalConfig
 operator|.
-name|getBool
-argument_list|(
-literal|"requestDispatcher/requestParsers/@enableRemoteStreaming"
-argument_list|,
-literal|false
-argument_list|)
+name|isEnableRemoteStreams
+argument_list|()
 expr_stmt|;
 comment|// Let this filter take care of /select?xxx format
 name|handleSelect
 operator|=
 name|globalConfig
 operator|.
-name|getBool
-argument_list|(
-literal|"requestDispatcher/@handleSelect"
-argument_list|,
-literal|true
-argument_list|)
+name|isHandleSelect
+argument_list|()
 expr_stmt|;
 name|addHttpRequestToContext
 operator|=
 name|globalConfig
 operator|.
-name|getBool
-argument_list|(
-literal|"requestDispatcher/requestParsers/@addHttpRequestToContext"
-argument_list|,
-literal|false
-argument_list|)
+name|isAddHttpRequestToContext
+argument_list|()
 expr_stmt|;
 block|}
 name|init
